syntax = "proto3";
option go_package = "renderer";

package models;

message RenderRequest {
  string url = 1;
  int32 width = 2;
  int32 height = 3;
  int32 timeout = 4;
  string timezone = 5;
  string encoding = 6;
  string filePath = 7;
  string renderKey = 8;
  string domain = 9;
  bool debug = 10;
  float scale = 11;
}

message RenderResponse {
  string error = 1;
}

service Renderer {
  rpc Render(RenderRequest) returns (RenderResponse);
}
